--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -18,6 +18,7 @@
         font-weight: 700;
         font-size: 12px;
         line-height: 20px;
+        text-align: center;
         color: var(--white);
     }
 }
