--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -3,6 +3,7 @@
     padding: 80px 0;
     display: grid;
     grid-template-columns: 1fr 10fr 1fr;
+    border-top: 3px solid var(--white);
     &__content {
         grid-column: 2 / 3;
         text-align: center;
