--- a/src/sass/blocks/_feature.scss
+++ b/src/sass/blocks/_feature.scss
@@ -34,7 +34,7 @@
 
 @media (max-width: 1140px) {
     .feature {
-        padding: 130px 0;
+        // padding: 130px 0;
         grid-template-columns: 1fr 20fr 1fr;
         &__wrapper {
             gap: 50px 30px;
