--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,4 +1,5 @@
 .header{
+    z-index: 0;
     background-color: var(--blue-dark);
     display: grid;
     grid-template-columns: 5fr 2fr;
@@ -38,11 +39,18 @@
         gap: 20px;
     }
     &__players {
-        display: grid;
-        grid-template-columns: min-content max-content;
-        gap: 40px 20px;
-        justify-content: center;
-        align-content: center;
+        display: flex;
+        align-self: center;
+        flex-direction: column;
+        justify-self: center;
+        gap: 40px;
+        &-block {
+            display: grid;
+            grid-template-columns: min-content max-content;
+            gap: 40px 20px;
+            justify-content: start;
+            align-content: center;
+        }
     }
     &__subtitle {
         grid-column: 1 / -1;
@@ -60,5 +68,47 @@
         font-size: 16px;
         line-height: 20px;
         color: var(--grey);
+    }
+}
+
+@media (max-width: 1140px) {
+    .main {
+        position: relative;
+        top: 60px;
+    }
+    .header{
+        z-index: 0;
+        grid-template-columns: 3fr 2fr;
+    }
+}
+
+@media (max-width: 992px) {
+    .header{
+        grid-template-columns: 1fr;
+        &__players {
+            padding: 60px 0;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .header{
+        &__main {
+            padding: 50px 20px 50px 20px;}
+        &__logo {
+            text-align: center;
+            margin-bottom: 80px;
+        }
+        &__btn {
+            margin-bottom: 80px;
+        }
+        &__descr {
+            gap: 10px;
+        }
+        &__players {
+            &-block {
+                grid-template-columns: min-content min-content;
+            }
+        }
     }
 }
