--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -33,8 +33,19 @@
     }
 }
 
+@media (max-width: 1445px) {
+    .title {
+        &_first {
+            font-size: 40px;
+        }
+    }
+}
+
 @media (max-width: 991px) {
     .title {
+        &_first {
+            font-size: 40px;
+        }
         &_second {
             font-size: 36px;
         }
@@ -43,12 +54,15 @@
 
 @media (max-width: 576px) {
     .title {
+        &_first {
+            font-size: 28px;
+            line-height: 40px;
+        }
         &_second {
             font-size: 20px;
         }
     }
     .subtitle {
-        font-weight: 300;
         font-size: 19px;
         line-height: 23px;
         letter-spacing: 0.13em;
